# bxfactories

./: CMakeLists.txt  README.rst  bxfactories-config.in
cmake/: BxFactoriesConfig.cmake.in  bxfactories.pc.in
examples/example1/: CMakeLists.txt  example1.cxx
source/bxfactories/: bxfactories.hpp  factory-inl.hpp  factory.hpp  factory_macros.hpp  version.hpp.in
tools/: README.md  build.sh  clean.sh
